--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,11 @@
     margin-right: -50%;
     transform: translate(-50%, -50%)
 }
+
+.solutionChar {
+    resize: none;
+}
+
+.hint {
+    background-color: yellow;
+}
